[tool.poetry]
name = "praj-pubmed-papers"
version = "0.1.0"
description = "A CLI tool to query PubMed for research papers authored by scientists affiliated with pharma and biotech industries."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pubmed_papers"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pandas = "^2.0.0"
tqdm = "^4.66.0"
lxml = "^4.9.0"
typing-extensions = "^4.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<8.0.0"
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pubmed_papers.cli:main"
